fix clipped ascenders/descenders in URL field (fixes #74)

--- a/src/web/css/navigation.css
+++ b/src/web/css/navigation.css
@@ -86,7 +86,7 @@ body {
   font-weight: 500;
   border: 4px solid #efefef;
   border-radius: 30px;
-  padding: 10px 20px;
+  padding: 0 20px;
   margin: 10px;
 }
 .nav__input:focus {
